Fix form on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -57,12 +57,13 @@ sup {
 }
 
 .my-form-mobile {
-  position: relative;
   height: 100%;
+  overflow-y: scroll;
 }
 
 .modal-content {
   width: 85%;
-  height: 100%;
+  height: 85%;
+  max-height: unset;
   background-color: #ffffff;
 }
